# repopilot

./: .gitignore  .repopilotignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Learning.md  README.md  Readme.md  SECURITY.md  action.yml  deny.toml  install.sh  package.json  repopilot.toml
.github/: dependabot.yml  labels.yml  pull_request_template.md  release_template.md  repository-topics.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  codeql.yml  pr-description.yml  publish-npm.yml  release.yml  repopilot-baseline-sarif.yml.example  repopilot-pr-review.yml  repopilot-sarif.yml.example
.repopilot/: baseline.json
Formula/: repopilot.rb
benches/: scan_bench.rs
docs/: README.md  agent-guardrail.md  ai-workflows.md  architecture-antipatterns.md  cache-diagnostics.md  cli.md  commands.md  configuration.md  core-visibility-engine.md  distribution.md  finding-contract.md  github-ruleset.md  gtm-0.12.md  install.md  knowledge-engine.md  language-support.md  local-feedback.md  mcp.md  product-readiness.md  react-native.md  release-announcement-0.11.md  release-announcement-0.12.md  release-checklist-0.10.md  release-checklist-0.12.md  release-checklist-0.13.md  release-checklist-0.8.md  release-checklist-0.9.md  release.md  report-schema-migration.md  reports.md  risk-engine.md  risk-model.md  roadmap-v0.7.md  roadmap.md  rule-lifecycle.md  rule-quality-gate.md  rules-reference.md  rulesets.md  security.md  signal-quality.md  (+1 more)
docs/archive/: gtm-0.12.md  gtm-0.13.md  (+6 more)
examples/: polyglot-report.md  react-native-report.md
scripts/: build-npm-platform-packages.js  build-vscode-platform-packages.js  check-review-performance.js  check-review-quality.py  check-scan-performance.js  check-signal-quality.py  demo-agent-edit.sh  demo-boundary-review.sh  demo-java-agent-edit.sh  demo-setup.sh  generate-pr-body.py  install-action-binary.sh  install.js  new-language.py  release-contract.py  repopilot-action-review.sh  repopilot-action.sh  review_delta.py  smoke-product.sh  verify-release.sh  zoo.py  zoo_expectations.py  zoo_scanner.py  zoo_scorecard.py  zoo_triage.py
src/: api.rs  app.rs  cli.rs  error.rs  lib.rs  main.rs  path_security.rs
tests/: action_delta.rs  action_yml.rs  ai_context_command.rs  ai_context_golden.rs  ai_plan_prompt_command.rs  architecture_context.rs  architecture_opt_in_rules.rs  audit_pipeline.rs  baseline_command.rs  baseline_key.rs  baseline_reader.rs  cache_fingerprint.rs  changed_scan_fixture_coverage.rs  cli_release_smoke.rs  cli_stabilization.rs  compare_diff.rs  complexity_audit.rs  config_loader.rs  config_scan_cli.rs  config_scan_integration.rs  coupling_audit.rs  coupling_graph.rs  deep_control_flow_test.rs  doctor_cli.rs  engine_pipeline_contract.rs  explain_cli.rs  file_facts_scan.rs  finding_contract.rs  finding_model.rs  finding_verification_plan.rs  fixture_secret_safety.rs  framework_detection.rs  harden_prompt_command.rs  import_extraction.rs  init_command.rs  inspect_graph_cli.rs  inspect_rules_cli.rs  install_script.rs  knowledge_cli.rs  knowledge_engine_integration.rs  (+61 more)
(+933 files in other folders)
