[package]
name = "repopilot"
version = "0.3.0"
edition = "2024"
description = "Local-first codebase audit CLI with evidence-backed findings"
license = "MIT"
repository = "https://github.com/MykytaStel/repopilot"
keywords = ["cli", "audit", "code-quality", "static-analysis"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.2"

[dev-dependencies]
tempfile = "3"
