[package]
name = "repopilot"
version = "0.10.0"
edition = "2024"
rust-version = "1.87"
description = "Local-first CLI for repository audit, architecture risk detection, baseline tracking, and CI-friendly code review."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/MykytaStel/repopilot"
documentation = "https://docs.rs/repopilot"
keywords = ["cli", "audit", "code-review", "static-analysis", "architecture"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
indicatif = "0.18.4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
