[package]
name = "repopilot"
version = "0.17.0"
edition = "2024"
description = "Local-first CLI for reviewing Git changes, security boundaries, and blast radius before merge."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/MykytaStel/repopilot"
documentation = "https://docs.rs/repopilot"
keywords = ["cli", "audit", "code-review", "static-analysis", "architecture"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "/src/**",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
globset = "0.4.18"
ignore = "0.4"
indicatif = "0.18.4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
sha2 = "0.11"
thiserror = "2"
tree-sitter = "0.26.9"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-kotlin-ng = "1.1.0"
toml = "1.1.2"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
proptest = "1.11.0"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[[bench]]
name = "scan_bench"
harness = false
